Fix flash close button X icon not showing
The broad button[type="button"] rule in redmine-bootstrap.css set
background: #fff which wiped out Bootstrap's .btn-close SVG background
image. Excluded .btn-close from that rule with :not(.btn-close) and
added position: static to override Bootstrap's absolute positioning
for alert-dismissible context.

--- a/app/assets/stylesheets/redmine-bootstrap.css
+++ b/app/assets/stylesheets/redmine-bootstrap.css
@@ -543,7 +543,7 @@ h4 { font-size: 1.125rem; }
 input[type="submit"],
 input[type="button"],
 button[type="submit"],
-button[type="button"],
+button[type="button"]:not(.btn-close),
 .button,
 a.button {
   display: inline-flex;
@@ -566,7 +566,7 @@ a.button {
 input[type="submit"]:hover,
 input[type="button"]:hover,
 button[type="submit"]:hover,
-button[type="button"]:hover,
+button[type="button"]:not(.btn-close):hover,
 .button:hover,
 a.button:hover {
   background: var(--rm-gray-50);
@@ -820,6 +820,7 @@ table.issues td.checkbox {
 }
 
 .flash .btn-close {
+  position: static;
   margin-left: auto;
   opacity: 0.5;
   border: none;
